--- a/css/menikah.css
+++ b/css/menikah.css
@@ -38,13 +38,17 @@ html {
 .hero {
   background-image: url('IMG_4449.JPG');
   height: 100%;
-  background: linear-gradient(rgba(153, 110, 109, 0.65), rgba(153, 110, 109, 0.65)), rgba(0, 0, 0, 0.55) url('IMG_4449.JPG') no-repeat;
+  background: linear-gradient(rgba(153, 110, 109, 0.65), rgba(153, 110, 109, 0.65)), 
+              rgba(0, 0, 0, 0.55) 
+              url('IMG_4449.JPG') no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  background-position: right center; /* Смещение влево, можно поменять на right center для сдвига вправо */
   color: white;
   box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   font-family: 'Raleway', sans-serif;
 }
+
 
 
 
