--- a/css/styles.css
+++ b/css/styles.css
@@ -3,16 +3,102 @@
     display: flex;
     justify-content: center; /* Выравниваем по центру по горизонтали */
     align-items: center; /* Выравниваем по центру по вертикали */
-    gap: 20px; /* Задаем промежуток между кругами */
+    gap: 10px; /* Задаем промежуток между кругами */
     margin-bottom: 100px;
   }
   
-  /* Стиль для отдельных кругов */
+/* Анимация для выплывания кружков */
+@keyframes slide-in {
+    0% {
+      transform: translateX(-100vw); /* Кружки начинаются за пределами экрана слева */
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0); /* Кружки двигаются в центр экрана */
+      opacity: 1;
+    }
+  }
+  
+  /* Применение анимации к каждому кружку */
   .circle {
     width: 50px;
     height: 50px;
     border-radius: 50%; /* Делаем элемент кругом */
-    background-color: #ccc; /* Дефолтный цвет, можно изменять */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Легкая тень для придания объема */
+    opacity: 0; /* Начальное состояние: кружки невидимы */
+    animation: slide-in 1s forwards;
   }
   
+  /* Задержка анимации для каждого кружка */
+  .circle:nth-child(1) {
+    animation-delay: 0.2s;
+  }
+  
+  .circle:nth-child(2) {
+    animation-delay: 0.4s;
+  }
+  
+  .circle:nth-child(3) {
+    animation-delay: 0.6s;
+  }
+  
+  .circle:nth-child(4) {
+    animation-delay: 0.8s;
+  }
+  
+  .circle:nth-child(5) {
+    animation-delay: 1s;
+  }
+  
+  
+
+.chat{
+    border-radius: 10px;
+    width: 160px;
+    height: 55px;
+    background-color: #996E6D;
+    color: black;
+    font-size: 1.5rem;
+    font-family: 'Raleway', sans-serif;
+    border: none;
+    border-left: 1px solid #996E6D;
+    border-right: 1px solid #996E6D;
+    border-top: 1px solid #996E6D;
+    border-bottom: 1px solid #996E6D;
+}
+
+.style-box{
+    text-align: center;
+    font-size: 5rem;
+    font-family: 'Rouge Script', sans-serif;
+    color: #996E6D;
+    line-height: 5rem;
+    margin-bottom: 40px;
+}
+
+.form-date{
+    border-radius: 10px;
+    width: 160px;
+    height: 55px;
+    background-color: #996E6D;
+    color: black;
+    font-size: 1.2rem;
+    font-family: 'Raleway', sans-serif;
+    border: none;
+    border-left: 1px solid #996E6D;
+    border-right: 1px solid #996E6D;
+    border-top: 1px solid #996E6D;
+    border-bottom: 1px solid #996E6D;
+}
+
+.form-date:active{
+    background-color: #403330;
+}
+
+#text-to-date{
+    margin-bottom: 40px;
+}
+
+.section-dark{
+    overflow: hidden;
+}
